# amis-python

./: .gitignore  AGENTS.md  README.md  base.md  index.html  pyproject.toml  test_show.py
docs/: amis-crud2-documentation.md  crud-recommended-patterns.md
docs/examples/: crud_page_example.py
src/: manage.py  pyproject.toml  test_settings.py  test_urls.py
src/amis_python/: __init__.py  apps.py  builder.py  drf.py  drf_permission.py  init.py  login_config.py  middleware.py  models.py  ninja.py  ninja_api.py  pagination.py  registry.py  schema.py  serializers.py  urls.py  views.py
src/amis_python.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/amis_python/build_amis/: crud.py  form.py
src/amis_python/builder/: __init__.py  action.py  action_container.py  api.py  app.py  base.py  button.py  button_group.py  button_group_select.py  button_toolbar.py  color.py  crud.py  dialog.py  divider.py  dropdown_button.py  event.py  event_action.py  form.py  image.py  input.py  page.py  service.py  tabs.py  tpl.py  utils.py  wrapper.py
src/amis_python/crud/: __init__.py  actions.py  context.py  filters.py  forms.py  helpers.py  pages.py  readonly.py  renderers.py  serializer_helpers.py
src/amis_python/migrations/: 0001_initial.py  0002_alter_file_id.py  0003_auto_20260110_2136.py  0003_file_uploader.py
src/amis_python/page/: curd_card.py  curd_table.py
src/amis_python/tests/: __init__.py  test_action.py  test_add_action.py  test_app_register.py  test_button.py  test_crud2.py  test_crud_actions.py  test_crud_pages.py  test_event_action.py  (+17 more)
static/: ang-ie11.css  ang.css  antd-ie11.css  antd.css  cxd-ie11.css  dark-ie11.css  dark.css  sdk.css  sdk.js
static/amis/: index.html
static/amis_edit/: css.worker.js.LICENSE.txt
static/css/: 8818.0677e292.css  vendor.a1c9d2c0.css
test_django/: main.py  pyproject.toml
test_django/my_app/: amis.py  apps.py  models.py  urls.py  views.py
test_django/test_django/: settings.py  urls.py
test_project/: pyproject.toml  settings.py  urls.py  wsgi.py
test_project/myapp/: tests.py  views.py
tests/: test_app.py  test_builder.py  test_page_registration.py
(+256 files in other folders)
