[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amis-python"
version = "0.1.0"
description = "Python-side schema builder for amis JSON"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.0", # 示例依赖
]

[tool.setuptools.packages.find]
where = ["src"]
