[project]
name = "test-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "amis-python",
    "django>=3.2,<5.0",  # Django 3.2+ 支持 Python 3.8
    "django-ninja>=1.0",  # django-ninja>=1.0 支持 pydantic>=2.0
]

[tool.uv.sources]
amis-python = { workspace = true, editable = true }
